# SolverPilot

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  LICENSE  README.md  STORY_1_1_UX_REQUIREMENTS.md  config.example.toml  eslint.config.js  index.html  lefthook.yml  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  release.yml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-multi-select-benchmarks-in-left-panel.md  1-2-queue-storage-in-sqlite-database.md  1-3-queue-panel-ui-view-queued-jobs.md  1-4-queue-job-management-remove-reorder.md  1-5-duplicate-detection-queue-filtering.md  2-1-bash-wrapper-script-state-capture-foundation.md  2-2-server-side-sqlite-database-schema-initialization.md  2-3-wrapper-deployment-via-ssh.md  2-4-queue-execution-backend-sequential-job-processing.md  2-5-start-pause-resume-queue-controls-frontend-backend.md  2-6-job-state-reconciliation-triple-redundancy-validation.md  epic-1-retrospective.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2026-01-11.md  prd.md  ux-design-directions.html  ux-design-specification.md
_bmad-output/planning-artifacts/research/: technical-remote-job-state-capture-ssh-tmux-research-2026-01-08.md
docs/: architecture-patterns.md  data-models-backend.md  deployment-guide.md  development-guide.md  existing-documentation-inventory.md  index.md  integration-architecture.md  ipc-commands-integration.md  project-parts-metadata.json  project-scan-report.json  project-structure.md  source-tree-analysis.md  state-management-patterns-frontend.md  technology-stack.md  ui-component-inventory-frontend.md  user-provided-context.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  deny.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: job_wrapper.sh  test_wrapper.sh
src-tauri/sql/: server_schema.sql
src-tauri/src/: commands.rs  config.rs  db.rs  job.rs  lib.rs  main.rs  paths.rs  project.rs  python_deps.rs  queue_service.rs  server_db.rs  ssh.rs  state.rs  wrapper.rs
src-tauri/src/ssh/: auth.rs  error.rs  executor.rs  mod.rs  pool.rs  transfer.rs
src/lib/: DependencyPanel.svelte  ProjectSelector.svelte  api.ts  types.ts
src/lib/features/benchmarks/: BenchmarkList.svelte
src/lib/features/dependencies/: DependencyPanel.svelte
src/lib/features/history/: HistoryPanel.svelte
src/lib/features/jobs/: JobMonitor.svelte
src/lib/features/projects/: ProjectSelector.svelte
src/lib/features/queue/: QueuePanel.svelte
src/lib/features/setup/: SetupWizard.svelte
src/lib/features/ssh/: SshPassphraseModal.svelte
src/lib/layout/: Header.svelte  MainLayout.svelte  ResizablePanel.svelte
src/lib/stores/: panels.svelte.ts  queue.svelte.ts  shortcuts.svelte.ts  toast.svelte.ts
src/lib/ui/: Badge.svelte  Button.svelte  ConfirmModal.svelte  EmptyState.svelte  IconButton.svelte  Modal.svelte  Select.svelte  Skeleton.svelte  Spinner.svelte  StatusBadge.svelte  Toast.svelte  ToastContainer.svelte  Tooltip.svelte
src/lib/utils/: focus-trap.ts  keyboard.ts
